gcc/testsuite/rust/rustc/ui/proc-macro/macros-in-extern-derive_dg.rs
extern "C" {
    #[derive(Copy)] // { dg-error ".E0774." "" { target *-*-* } }
    fn f();
}

fn main() {}

